[package]
name = "tmux-cpu-rs"
version = "0.4.2"
edition = "2024"
repository = "https://github.com/playbahn/tmux-cpu-rs"
description = "A Tmux status line plugin to show CPU usage"
license = "MIT OR Apache-2.0"
keywords = ["tmux", "statusline", "plugin", "cpu", "monitor"]
categories = ["command-line-utilities", "accessibility"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
color-print = "0.3.7"
palette = "0.7.6"
